2005-08-07  Douglas Bates  <bates@wisc.edu>

	* DESCRIPTION (Version): 0.98-2

	* R/HBMM.R (readHB), (readMM): read Matrix Market formats

	* R/lmer.R (abbrvNms): new
	* R/lmer.R (mcmcsamp): allow transformed parameters
	* src/HBMM.c (Matrix_writeMatrixMarket): Added read/write routines
	for the Harwell-Boeing and the MatrixMarket formats.

2005-08-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/dtrMatrix-class.Rd: add examples
	* man/dtpMatrix-class.Rd: ditto; plus note about PROBLEM

	* TODO: note the dtpMatrix (docu) bug

	* R/zzz.R (.onLoad): assignInNamespace("as.matrix", *, "base")
	in order to ensure that new as.matrix() is used by old functions,
	e.g., svd(), qr(), eigen(), dist(),..;
	      apply(), also matplot() or pairs().


2005-08-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmer.R: add 'fixme' comments and move the linear vs glm check;
	  add comments about 'control' / lmerControl() arguments

2005-07-27  Douglas Bates  <bates@wisc.edu>

	* man/sleepstudy.Rd: Added the sleep data set.
	* DESCRIPTION (Version): 0.98-1  released to CRAN

2005-07-12  Douglas Bates  <bates@wisc.edu>
	* man/sleepstudy.Rd: Added the sleep data set.

	* R/lmer.R (glmmMCMC): Added PACKAGE = "Matrix" in a couple of
	.Call calls that were producing spurious output.

2005-07-05  Douglas Bates  <bates@wisc.edu>

	* R/lmer.R (lmer): stored updated variance component estimates in
	mer object for the generalized model.  (Bug reported by Renaud
	Lancelot).

2005-07-03  Douglas Bates  <bates@wisc.edu>

	* src/lmer.c (glmer_devAGQ): Added AGQ for single grouping factor,
	unidimensional case.

2005-06-08  Douglas Bates  <bates@wisc.edu>

	* DESCRIPTION (Version): 0.96-1

	* moved  lmer-class' R and C code moved from lme4 to here

2005-06-04  Douglas Bates  <bates@wisc.edu>

	* R/dgCMatrix.R: Call to csc_matrix_mm used undefined arguments
	(reported by Guissepe Ragusa <gragusa@ucsd.edu>)

2005-06-02  Douglas Bates  <bates@wisc.edu>
