@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.98-2
-Date: 2005-08-07
+Version: 0.98-3
+Date: 2005-08-10
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
